--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -1,7 +1,8 @@
-* {
-    margin: 0;
-    padding: 0;
+*, *::before, *::after {
     box-sizing: border-box;
+    margin: 0;
+    border: 0;
+    padding: 0;
 }
 
 .image-wrapper {
