--- a/src/css/home.css
+++ b/src/css/home.css
@@ -58,35 +58,35 @@ html {
 }
 
 .navigation-square {
-	background-color: rgb(0, 0, 0);
+	background-color: #2c2e35;
 }
 
 .square.placeholder {
-    background-color: #cccccc;
+    background-color: #cacbcc;
 }
 
 .social-square {
-	background-color: rgb(155, 155, 155);
+	background-color: #95969a;
 }
 
 .urban-planning {
-	background-color: rgb(169, 210, 82);
+	background-color: #a9d252;
 }
 
 .single-building {
-	background-color: rgb(147, 219, 224);
+	background-color: #93dbe0;
 }
 
 .installation {
-	background-color: rgb(255, 206, 54);
+	background-color: #ffa937;
 }
 
 .activity {
-	background-color: rgb(255, 173, 195);
+	background-color: #ffadc3;
 }
 
 .transformation {
-	background-color: rgb(255, 173, 195);
+	background-color: #ffadc3;
 }
 
 /* Pop-up styles */
