--- a/src/css/home.css
+++ b/src/css/home.css
@@ -57,7 +57,15 @@ html {
 	margin: auto; /* Additional measure to center the image */
 }
 
-.navigation-square {
+.big img{
+	width: 85%;
+}
+
+.small img{
+	width: 60%;
+}
+
+.control-square {
 	background-color: #2c2e35;
 }
 
@@ -94,91 +102,73 @@ html {
 }
 
 /* Pop-up styles */
+.generic-popup {
+	position: fixed;
+	width: 300px; 
+	height: 300px;
+	display: flex;
+	justify-content: left;
+	align-items: left;
+	text-align: left;
+	z-index: 10; /* High z-index to be on top */
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Optional: Shadow for 3D effect */
+	overflow: auto; /* Enable scrolling if content exceeds the box */
+}
 
-#popup {
-    position: absolute;
-    width: 12em; /* Adjust size as needed */
-    height: 12em; /* Keep square shape */
-    overflow: hidden;
-    border: none; /* Removed the border */
+.popup-content {
+	margin: 0;
+	padding: 0;
+	background-color: rgba(111, 111, 111, 0.8);
+	color: #ffffff; /* Ensure text is visible against potentially dark bg */
+}
+
+.popup-close {
+	background: none;
+	border: none;
+	color: #ffffff;
+	font-size: 1.5rem;
+	position: absolute;
+	padding: 0;
+	margin: 0;
+}
+
+.project-button{
+	background: none;
+	border: none;
+	color: #ffffff;
+	font-size: 1.5rem;
+	padding: 0;
+	margin: 0;
+}
+
+.popup-data th, .popup-data td {
+	text-align: left;
 }
 
 .popup-hidden {
-    display: none;
+	display: none;
 }
 
 .popup-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-size: cover;
     background-position: center;
-    opacity: 0.95; /* Reduced opacity */
-	background-color: aliceblue;
 }
 
-#popup-image::after {
-    content: ''; /* Required for pseudo-elements */
-    position: absolute; /* Position it over the popup image */
-    top: 0; /* Align it to the top */
-    left: 0; /* Align it to the left */
-    right: 0; /* Stretch it to the right */
-    bottom: 0; /* Stretch it to the bottom */
-    background-color: rgba(55, 55, 55, 0.37); /* Dark gray with opacity */
-    z-index: 1; /* Ensure it's above the image but below the content */
-}
-
-.popup-content {
-    position: relative;
-    z-index: 2; /* Ensure the content is above the overlay */
-}
-
-.popup-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
+/* Legend styles */
+.legend-entry {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0.5em; /* Added padding */
+    align-items: center;
+    margin-bottom: 0.5em; /* Space between entries */
 }
 
-/* Close button styles */
-#popup-close {
-    background: none;
-    border: none;
-	color: #ffffff;
-    font-size: 1.5rem;
-    cursor: pointer;
-    align-self: flex-end;
+.legend-color {
+    width: 20px; /* Size of the square */
+    height: 20px; /* Size of the square */
+    display: inline-block;
+    margin-right: 0.5em; /* Space between the square and the text */
 }
 
-/* Redirect button styles */
-#popup-redirect {
-    background: none;
-    border: none;
-    color: #ffffff;
-	font-size: 2rem;
-    cursor: pointer;
-    align-self: flex-end;
-}
-
-#popup-redirect:before {
-    padding-right: 5px;
-}
-
-/* Table styles */
-#popup-data {
-    align-self: flex-start;
-    margin-left: 0.25em; /* Added margin to the left */
-    margin-bottom: 0.25em; /* Added margin to the bottom */
-}
-
-/* Pop-up table styles */
-
-#popup-data, table {
-    text-align: left;
-	font-size: 0.7rem;
-	color: #ffffff;
+.legend-text {
+    font-size: 0.9rem; /* Adjust text size as needed */
+    color: #333; /* Text color, adjust as needed */
 }
