--- a/src/css/home.css
+++ b/src/css/home.css
@@ -61,14 +61,6 @@ html {
 	margin: auto; /* Additional measure to center the image */
 }
 
-.big img{
-	width: 85%;
-}
-
-.small img{
-	width: 60%;
-}
-
 .control-square {
 	background-color: #2c2e35;
 }
@@ -115,34 +107,55 @@ html {
 	align-items: left;
 	text-align: left;
 	z-index: 10; /* High z-index to be on top */
+	background-color: rgba(111, 111, 111, 0.8);
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Optional: Shadow for 3D effect */
-	overflow: auto; /* Enable scrolling if content exceeds the box */
+	overflow: hidden; /* Enable scrolling if content exceeds the box */
+}
+
+.popup-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    z-index: 1; /* Lower z-index to sit behind the content */
 }
 
 .popup-content {
-	margin: 0;
-	padding: 0;
-	background-color: rgba(111, 111, 111, 0.8);
-	color: #ffffff; /* Ensure text is visible against potentially dark bg */
+    position: relative;
+    z-index: 3; /* Highest z-index to be on top */
+    color: #ffffff;
+    padding: 20px; /* Add padding to ensure content does not touch the edges */
 }
 
 .popup-close {
-	background: none;
-	border: none;
-	color: #ffffff;
-	font-size: 1.5rem;
-	position: absolute;
-	padding: 0;
-	margin: 0;
+    position: absolute;
+	z-index: 4;
+    top: 10px; /* Adjust the position to be slightly from the top edge */
+    right: 10px; /* Adjust the position to be slightly from the right edge */
+    background: none;
+    border: none;
+    color: #ffffff;
+    font-size: 1.5rem;
+    cursor: pointer; /* Ensure it's clear it is clickable */
 }
 
-.project-button{
-	background: none;
-	border: none;
-	color: #ffffff;
-	font-size: 1.5rem;
-	padding: 0;
-	margin: 0;
+.popup-close:hover, .project-button:hover{
+	cursor: pointer;
+	color: #bdbdbd;
+}
+
+.project-button {
+    position: absolute;
+    bottom: 10px; /* Position it at the bottom */
+    left: 10px; /* Position it at the left */
+    background: none;
+    border: none;
+    color: #ffffff;
+    font-size: 1.5rem;
+    cursor: pointer; /* Ensure it's clear it is clickable */
 }
 
 .popup-data th, .popup-data td {
@@ -156,9 +169,25 @@ html {
 .popup-image {
     background-size: cover;
     background-position: center;
+	z-index: 2; /* High z-index to be on top */
+}
+
+/* Language selection popup styles */
+.popup-language {
+    width: 200px;  /* Smaller width for language selection */
+    height: auto;  /* Height adjusts to content */
+}
+
+.popup-language .popup-content {
+    padding: 10px; /* Smaller padding for compact design */
 }
 
 /* Legend styles */
+.popup-legend {
+	width: 200px;  /* Smaller width for legend */
+	height: auto;  /* Height adjusts to content */
+}
+
 .legend-entry {
     display: flex;
     align-items: center;
@@ -174,5 +203,73 @@ html {
 
 .legend-text {
     font-size: 0.9rem; /* Adjust text size as needed */
-    color: #333; /* Text color, adjust as needed */
+    color: #ffffff; /* Text color, adjust as needed */
+}
+
+/*Language selection styles */
+.popup-language {
+    width: 80px;  /* Smaller width for language selection */
+    height: auto;  /* Height adjusts to content */
+}
+
+.popup-language .popup-content {
+    padding: 10px; /* Smaller padding for compact design */
+}
+
+.language-option:hover {
+	cursor: pointer; /* Change cursor to pointer on hover */
+	color: #bdbdbd; /* Change text color on hover */
+}
+
+/* Menu styles */
+.popup-menu {
+    width: 180px;
+    height: auto; 
+}
+
+.popup-menu .popup-content {
+    padding: 10px; /* Smaller padding for compact design */
+}
+
+.menu-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu-item {
+    margin: 10px 0; /* Spacing between menu items */
+}
+
+.menu-item a {
+    text-decoration: none;
+    color: #fff;  /* White text color */
+    font-size: 1.2rem;
+    display: block; /* Makes the entire area clickable */
+    padding: 8px; /* Padding for easier clicking */
+}
+
+.menu-item a:hover {
+    color: #d8d8d8; /* Hover effect */
+}
+
+/* Sorting options */
+.popup-sorting {
+    width: 125px;
+    height: auto; 
+}
+
+.popup-sorting .popup-content {
+    padding: 10px; /* Smaller padding for compact design */
+}
+
+.sorting-option {
+    cursor: pointer;
+    padding: 5px;
+    color: #fff;
+    font-size: 1rem;
+}
+
+.sorting-option:hover {
+    color: #d8d8d8; /* Hover effect for visual feedback */
 }
