--- a/src/css/home.css
+++ b/src/css/home.css
@@ -61,6 +61,10 @@ html {
 	margin: auto; /* Additional measure to center the image */
 }
 
+.logo-img img{
+    width: 85%; /* Increase the size of the logo for readability */
+}
+
 .control-square {
 	background-color: #2c2e35;
 }
