--- a/src/css/project-details.css
+++ b/src/css/project-details.css
@@ -46,7 +46,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3); /* Semi-transparent black overlay */
+    background: rgba(0, 0, 0, 0.2); /* Semi-transparent black overlay */
     z-index: 1; /* Ensure it is above the image but below the text */
 }
 
@@ -113,23 +113,25 @@ body, html {
 .image-gallery {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    justify-content: space-between; /* Ensures that elements are spaced out evenly */
+    gap: 10px; /* Sets gap between rows and columns */
+    width: 100%; /* Full width of the container */
 }
 
-.image-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* Ensures that the elements are spaced out evenly */
-    gap: 10px; /* Sets gap between rows and columns */
+.image-gallery a {
+    width: calc(33.33% - 10px); /* Adjust width considering 10px gap */
+    display: block; /* Treats the link as a block, enabling width and height settings */
+    text-decoration: none; /* Removes underline from links */
 }
 
 .image-gallery img {
-    width: calc(33.33% - 10px); /* Adjust width considering 10px gap */
-    display: block; /* Optional, ensures no extra space below images */
+    width: 100%; /* Ensures the image fills the anchor tag */
+    display: block; /* Removes bottom space/gap below the images */
+    height: auto; /* Maintains aspect ratio */
 }
 
-
 .footer {
+    margin-top: 2em;
     width: 100%;
 }
 
@@ -139,11 +141,14 @@ body, html {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    border-top: 3em;
 }
 
 .footer .navigation img {
-    width: 100px;
+    width: 80px;
     height: auto;
+    padding: 1em;
+    border: 2px solid black;
 }
 
 @media (max-width: 768px) {
@@ -161,8 +166,8 @@ body, html {
         min-height: 35vh;
     }
 
-    .image-gallery img {
-        width: calc(50% - 5px); /* Adjust the subtraction for margin/padding */
+    .image-gallery a {
+        width: calc(50% - 5px); /* Adjust width considering 10px gap */
     }
 
     .text-section {
