--- a/src/css/project-details.css
+++ b/src/css/project-details.css
@@ -18,7 +18,6 @@ body, html {
 	display: flex;
 	flex-wrap: wrap; /* Allow squares to wrap to the next line */
 	gap: 0.7em; /* Space between grid items */
-	display: flex;
 	justify-content: center; /* Center the items horizontally */
 	align-items: center; /* Center the items vertically */
 }
@@ -61,18 +60,52 @@ body, html {
     padding: 0; /* No padding around the text */
 }
 
-.back-home-button {
+.overlay-button {
     position: absolute;
-    top: 10px; /* Position from the top */
-    right: 10px; /* Position from the right */
+    top: 1em; /* Position from the top */
+    right: 1em; /* Position from the right */
     padding: 0.25em; /* Padding inside the button */
-    width: 4em; /* Width of the button/logo */
-    height: 4em; /* Height of the button/logo */
+    width: 5em; /* Width of the button/icon */
+    height: 5em; /* Height of the button/icon */
     background-color: white; /* Background color of the button */
     border: none; /* No border */
     z-index: 2; /* Ensures button is above the overlay */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for better visibility */
 }
+
+.transparent-button{
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.back-home-button {
+    top: 1em; /* Position from the top */
+}
+
+.language-button {
+    top: auto;
+    bottom: 1em; /* Position from the top */
+    width: 3em; /* Width of the button/icon */
+    height: 3em; /* Height of the button/icon */
+}
+
+.language-option {
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .language-option:hover {
+    background-color: #f0f0f0;
+  }
+
+.language-dropdown {
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    width: 100%;
+    z-index: 1000;
+    display: none;
+  }
 
 .text-section {
     background-color: #f0f0f0;
@@ -83,7 +116,7 @@ body, html {
     width: 100%;
     min-height: 250px; /* Adjusted by JavaScript, as necessary */
     overflow-y: auto; /* Adds scrollbar when necessary */
-    border: #ccc 2px solid; /* Add border for separation */
+    border: #ccc 3px solid; /* Add border for separation */
 }
 
 .table-container table {
@@ -162,6 +195,11 @@ body, html {
         left: 0.5em; /* Position from the left */
     }
 
+    .back-home-button {
+        width: 4em; /* Width of the button/icon */
+        height: 4em; /* Height of the button/icon */
+    }
+
     .video{
         min-height: 35vh;
     }
@@ -171,6 +209,6 @@ body, html {
     }
 
     .text-section {
-        padding: 0.5em 1em;
+        padding: 1.125em;
     }
 }
