--- a/src/css/project-details.css
+++ b/src/css/project-details.css
@@ -103,7 +103,7 @@ body, html {
     background-color: #fff;
     border: 1px solid #ccc;
     width: 100%;
-    z-index: 1000;
+    z-index: 3;
     display: none;
   }
 
@@ -128,6 +128,7 @@ body, html {
 
 .table-container, #osm-map {
     flex: 1; 
+    z-index: 0
 }
 
 .table-container table {
