--- a/src/css/project-details.css
+++ b/src/css/project-details.css
@@ -122,11 +122,28 @@ body, html {
 .table-wrapper {
     flex: 1;
     position: relative;
-    z-index: 1; /* Ensure table is above other content when expanded */
+    z-index: 1;
     transition: max-height 0.3s ease-in-out;
     overflow: hidden;
-    max-height: 30vh; /* Initial max height same as map */
-    border: 3px solid #ccc; /* Separates table from map */
+    max-height: 30vh;
+    border: 3px solid #ccc;
+    background: linear-gradient(to bottom, transparent, white 70%); /* Background gradient for a fading white effect */
+}
+
+.table-wrapper::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    background: linear-gradient(to top, rgba(255, 255, 255, 0.8), transparent);
+    display: block;
+    z-index: 3; /* Higher z-index to ensure it's above the table content but below the expand button */
+}
+
+.table-wrapper.expanded::after {
+    display: none; /* Hide the overlay when the table is expanded */
 }
 
 .table-container {
@@ -153,7 +170,7 @@ body, html {
 
 .table-container, #osm-map {
     flex: 1; 
-    z-index: 2;
+    z-index: 1;
 }
 
 .table-container table {
